<resources>
    <string name="app_name">MemSto</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_new_account"><u>create new account</u></string>
    <string name="login_with_google">Login with Google</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_up_with_google">Sign up with Google</string>
    <string name="name">Name</string>
    <string name="webclient_id">614668962152-a9frqofnu64eke4gac3cmruf61efni8m.apps.googleusercontent.com</string>
    <string name="hello_string">Hello, %1$s!</string>
    <string name="upload_image">Upload Image</string>
    <string name="uploading">Uploading</string>
    <string name="uploaded">Uploaded</string>
    <string name="error_occurred">Error Occurred</string>
    <string name="memory">Memory</string>
    <string name="your_memories_will_appear_here">Your memories will appear here.</string>
    <string name="confirm_password">Confirm password</string>
    <string name="chats">Chats</string>
    <string name="write_message">Write a message…</string>
    <string name="test_message">This is a test message to test the width and height correction of the message bubble.</string>
    <string name="add_image">Add Image</string>
    <string name="sign_out">Sign out</string>
    <string name="save_changes">Save changes</string>
    <string name="set_time">%1$s,%2$s</string>
    <string name="date">Date</string>
    <string name="set_date">%1$s</string>
    <string name="are_you_sure">Are you sure you want to Logout?</string>
    <string name="no">No</string>
    <string name="logout">Logout</string>
    <string name="cancel">Cancel</string>
    <string name="share_memory">Share Memory</string>
    <string name="share">Share</string>
    <string name="loading_image">Loading image…</string>
    <string name="select_an_option">Select an option</string>
    <string name="capture_image">Capture Image</string>
    <string name="from_gallery">Take from gallery</string>
</resources>