<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/transparent"
    android:layout_margin="16dp">

    <androidx.cardview.widget.CardView
        app:cardCornerRadius="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="12dp"
            android:background="@color/calico">

            <ImageView
                android:id="@+id/ivWarning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                android:src="@drawable/ic_warning"
                android:rotation="180"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/tvConfirmation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/are_you_sure"
                android:textSize="28sp"
                android:textColor="@color/gable_green"
                android:textStyle="bold"
                android:gravity="center"
                app:layout_constraintTop_toBottomOf="@id/ivWarning"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnNo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:textColor="@color/gable_green"
                android:textAllCaps="false"
                android:layout_marginTop="16dp"
                android:background="@drawable/button_hollow_bg"
                app:layout_constraintTop_toBottomOf="@id/tvConfirmation"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btnLogout"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnLogout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/logout"
                android:textAllCaps="false"
                android:layout_marginTop="16dp"
                android:textColor="@color/calico"
                android:background="@drawable/button_solid_bg"
                android:layout_marginStart="16dp"
                app:layout_constraintTop_toBottomOf="@id/tvConfirmation"
                app:layout_constraintStart_toEndOf="@id/btnNo"
                app:layout_constraintEnd_toEndOf="parent"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>